# web-search

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs  search.rs  types.rs
