[package]
name = "cardea-web-search"
version = "0.10.0"
edition = "2024"
repository = "https://github.com/cardea-mcp/web-search"
license    = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = { version = "1.18" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rmcp = { version = "=0.6.4", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
    "transport-sse-server",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "net", "fs", "time", "signal"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
